Opened 11 years ago
Closed 10 years ago
#5126 closed defect (fixed)
signed integer overflow in process_input_packet()
| Reported by: | tsmith | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
UBSan runtime error: signed integer overflow: -9223372036854775808 + -894751520 cannot be represented in type 'long'
How to reproduce:
% ffmpeg -f ivf -i <test_case> -f null -
ffmpeg version N-77718-g72673ad Copyright (c) 2000-2016 the FFmpeg developers
built with Ubuntu clang version 3.7.1-svn253742-1~exp1 (branches/release_37) (based on LLVM 3.7.1)
configuration: --cc=clang --cxx=clang++ --disable-libxcb --disable-xlib --disable-logging --disable-ffprobe --disable-ffplay --disable-sdl --disable-ffserver --disable-doc --disable-pthreads --disable-network --disable-d3d11va --disable-dxva2 --disable-vaapi --disable-vda --disable-vdpau --disable-stripping --disable-runtime-cpudetect --disable-securetransport --disable-iconv
libavutil 55. 12.100 / 55. 12.100
libavcodec 57. 22.100 / 57. 22.100
libavformat 57. 21.101 / 57. 21.101
libavdevice 57. 0.100 / 57. 0.100
libavfilter 6. 23.100 / 6. 23.100
libswscale 4. 0.100 / 4. 0.100
libswresample 2. 0.101 / 2. 0.101
[vp9 @ 0x619000005a80] Warning: not compiled with thread support, using thread emulation
Input #0, ivf, from '/home/user/Desktop/vpx/corpus/0975850ab5eab1e17bb6913393f1bb2933a67f25':
Duration: N/A, bitrate: N/A
Stream #0:0: Video: vp9 (Profile 0) (VP90 / 0x30395056), yuv420p(tv), 2x25, lossless, 0.0000 tbr, 0.0000 tbn, 0.0000 tbc
[wrapped_avframe @ 0x619000003280] Warning: not compiled with thread support, using thread emulation
[vp9 @ 0x619000003c80] Warning: not compiled with thread support, using thread emulation
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf57.21.101
Stream #0:0: Video: wrapped_avframe, yuv420p, 2x25, q=2-31, 200 kb/s, 0.0000 fps, 0.0000 tbn, 0.0000 tbc
Metadata:
encoder : Lavc57.22.100 wrapped_avframe
Stream mapping:
Stream #0:0 -> #0:0 (vp9 (native) -> wrapped_avframe (native))
Press [q] to stop, [?] for help
ffmpeg.c:2335:31: runtime error: signed integer overflow: -9223372036854775808 + -894751520 cannot be represented in type 'long'
#0 0x592a11 in process_input_packet /home/user/code/ffmpeg/ffmpeg.c:2330:31
#1 0x5990bc in process_input /home/user/code/ffmpeg/ffmpeg.c:3980:5
#2 0x5726c6 in transcode_step /home/user/code/ffmpeg/ffmpeg.c:4068:11
#3 0x5726c6 in transcode /home/user/code/ffmpeg/ffmpeg.c:4122
#4 0x56f73c in main /home/user/code/ffmpeg/ffmpeg.c:4314:9
#5 0x7f22b2676ec4 in __libc_start_main /build/buildd/eglibc-2.19/csu/libc-start.c:287
#6 0x466445 in _start (/home/user/Desktop/ffmpeg/ffmpeg_full+0x466445)
Attachments (1)
Change History (2)
by , 11 years ago
| Attachment: | test_case.vp9.ivf added |
|---|
comment:1 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in 5590ab45e0b1cd45e48580608f99615ad0a429b8