ffmpeg: Check best_effort_timestamp after rescale

Fixes integer overflow
Fixes: Ticket5126

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>